tests/build/impl_ui_node_macro/fail/delegate_list_expr_error_incorrect_mut copy.stderr
error[E0308]: mismatched types
 --> $DIR/delegate_list_expr_error_incorrect_mut copy.rs:5:63
  |
5 | #[impl_ui_node(delegate_list: &self.inner, delegate_list_mut: &self.inner)]
  |                                                               ^^^^^^^^^^^ types differ in mutability
  |
  = note: expected mutable reference `&mut _`
                     found reference `&C`
